Show live flight stage states